# stencil

./: .gitignore  CMakeLists.txt  README.md  kernel.cu  main.cpp
include/: stencil_kernel.cuh
src/: stencil_kernel.cu
